--- a/workout/src/main/res/values/strings.xml
+++ b/workout/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="workout_title">Title</string>
     <string name="workout_description">Description</string>
 
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="reset">Reset</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
